# H-Detector

./: .gitignore  LICENSE  README.md  requirements.txt
b_line/: README.md
b_line/analysis/: calc_scalar_h.py  calc_scalar_h_1.5b.py  classifier_sign_flip.py
experiments/: README.md
h_detector/: __init__.py  __main__.py  detector.py  helicity.py  pca_trajectory.py  storm_zone.py
helicity-dynamics/: README.md  pyproject.toml
helicity-dynamics/examples/: ising_phase_transition.py  quickstart.py
helicity-dynamics/src/helicity_dynamics/: __init__.py  _core.py  _ising.py  _timeseries.py
helicity-dynamics/tests/: test_core.py
ising_naf_paper/: README.md  manuscript.tex
ising_naf_paper/figures/: fig1_ising_helicity_spectrum.py  fig2_finite_size_scaling.py  fig3_naf_cross_domain.py
ising_naf_paper/helicity/: helicity.py
ising_naf_paper/ising/: ising_2d_L128.npz  ising_2d_L32.npz  ising_2d_L64.npz  ising_generate_L128.py  ising_vectorized.py  o_ising_L128_analysis.py  o_ising_cross_lattice.py
ising_naf_paper/naf_ismetpasa/: IsmetpasaWall%20North%209Oct2019.txt  naf_multi_station_o.py  o_hat_creepmeter.py  o_hat_ismetpasa.py
ising_naf_paper/research_notes/: o-phase-transition-spectrum-v5-final-20260719.md  o-positive-negative-control-case-study-20260719.md  research-note-15-ising-l128-20260719.md
papers/: LINKS.txt
papers/paper5/: paper5_master.tex
papers/planetary-cascade-entropy/: README.md  planetary_cascade_entropy.tex  planetary_habitability.json  planetary_habitability.py
